moved over all team members and fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -459,20 +459,43 @@ header .intro-text {
 #team {
   padding: 100px 0;
 }
+
 #team h4 {
   margin: 5px 0;
 }
+
 #team .team-img {
   width: 240px;
 }
+
 #team .thumbnail {
   background: transparent;
   border: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: height 0.3s ease;
 }
+
 #team .thumbnail .caption {
   padding: 10px 0 0;
   color: #888;
 }
+
+.bio-preview {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* white-space: nowrap; */
+  height: 90px; /* height for preview */
+  margin-bottom: 0px; /* bio and Show More gap */
+}
+
+.full-bio {
+  /* height: auto; */
+  height: 300px;
+  white-space: normal;
+}
+
 /* Contact Section */
 #contact {
   padding: 100px 0 60px;
